--- a/latex_template/preamble.tex
+++ b/latex_template/preamble.tex
@@ -3,7 +3,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[tmargin=2cm,rmargin=1in,lmargin=1in,margin=0.85in,bmargin=2cm,footskip=.2in]{geometry}
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
-\allowdisplaybreaks
+\allowdisplaybreaks[1]
 \usepackage{undertilde}
 \usepackage{xfrac}
 \usepackage[makeroom]{cancel}
@@ -31,6 +31,7 @@
 \usepackage{import}
 \usepackage{xifthen}
 \usepackage{pdfpages}
+\usepackage{svg}
 \usepackage{transparent}
 
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
